--- a/.env
+++ b/.env
@@ -22,5 +22,8 @@ DYDX_API_PASSPHRASE_MAINNET="824Zoo_p4yHqJ3P2TaQE"
 HOSTMAIN=API_HOST_MAINNET
 #ALCHEMY API URL MAINNET APP
 alchemy_url_mainapp = "https://eth-mainnet.g.alchemy.com/v2/uuZJ3gZZMKeAKFYz3asJIDHgQNHDuxtG"
+#TELEGRAM
+TELEGRAM_TOKEN="6105011864:AAEQ9a435b9O2RaWmg6Rfn_C2NrPZN2Y4aA"
+TELEGRAM_CHAT_ID="6224842646"
 
 
